--- a/style.css
+++ b/style.css
@@ -1033,15 +1033,6 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
-    .row {
-        max-width: 100%;
-    }
-    .col-sm-12{
-        max-width : 100%;
-    }
-    .mobile img{
-        width : 110%;
-    }
 }
 
 @media (max-width: 767px) {
@@ -1050,6 +1041,7 @@ h4 {
     }
     .row {
         max-width: 100%;
+        margin-left: 0;
     }
     .col-sm-12{
         max-width : 100%;
